# snow

./: .gitignore  Makefile  README.md  flake.nix  snow.cabal  temp.nix
app/: Config.hs  Main.hs  Utils.hs
