cabal-version:      3.4
name:               snow
version:            0.1.0.0
synopsis:           Simple nix flake boilerplate generator
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             TuKankamon
maintainer:         wigle.flick228@passinbox.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable snow
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
